<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/super_program_logo_text"
        android:textColor="#9A006F"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/enterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_text"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <RadioGroup
            android:id="@+id/groupRadios"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonViolet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/violet_text"
                android:textColor="@color/violet" />

            <RadioButton
                android:id="@+id/radioButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_text"
                android:textColor="@color/green" />

            <RadioButton
                android:id="@+id/radioButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_text"
                android:textColor="@color/blue" />

            <RadioButton
                android:id="@+id/radioButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_text"
                android:textColor="@color/red" />

            <RadioButton
                android:id="@+id/radioButtonOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orange_text"
                android:textColor="@color/orange" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:onClick="showResult"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    tools:ignore="UsingOnClickInXml" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:onClick="clearResult"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="#FF0000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>